--- a/templates/home.html
+++ b/templates/home.html
@@ -28,7 +28,7 @@
             </div> 
         </div>
     </div> 
-    <div style="display:none"> 
+    <div class="cipher-forms" style="display:none"> 
         <div id="ceaser_cipher_body">
             Hello Ceaser Cipher
             <form  action={{url_for('ceaser_cipher_page')}}>
