--- a/templates/home.html
+++ b/templates/home.html
@@ -22,6 +22,9 @@
                         <a class="dropdown-item" href='#'>Ceaser Cipher</a>
                         <a class="dropdown-item" href="#">Vigelence Cipher</a>
                         <a class="dropdown-item" href="#">Something else here</a>
+                        <!-- TODO: add dropdown for new cipher
+                            <a class="dropdown-item" href="#">New Cipher</a>
+                        -->
                     </div>
                 </div>
                 <div class="container" id="cipher_body">
@@ -60,6 +63,15 @@
                 <button  type="submit" class="btn btn-primary">Submit</button>
             </form>
         </div>
+
+        <!-- TODO: ADD forms for new cipher
+            <div id="new_cipher_body">
+                <form>
+                ...
+                </form>
+            </div>
+        -->
+
     </div>
     <script
     src="https://code.jquery.com/jquery-3.6.1.min.js"
