--- a/templates/home.html
+++ b/templates/home.html
@@ -21,7 +21,7 @@
                     <div class="dropdown-menu" id="cipher-dropdown-menu" aria-labelledby="dropdownMenuButton">
                         <a class="dropdown-item" href='#'>Ceaser Cipher</a>
                         <a class="dropdown-item" href='#'>Affine Cipher</a>
-                        <a class="dropdown-item" href="#">Vigelence Cipher</a>
+                        <a class="dropdown-item" href="#">Vigenere Cipher</a>
                         <a class="dropdown-item" href="#">Something else here</a>
                         <!-- TODO: add dropdown for new cipher
                             <a class="dropdown-item" href="#">New Cipher</a>
@@ -87,6 +87,30 @@
                         <input name="key_1" type="text" class="form-control" id="inputKey" placeholder="1..26">
                         <label class="form-text" for="inputKey">Key 2</label>
                         <input name="key_2" type="text" class="form-control" id="inputKey" placeholder="1..26">
+                    </div>
+                </div>
+                <button  type="submit" class="btn btn-primary">Submit</button>
+            </form>
+        </div>
+
+        <!-- Vigenere Cipher -->
+        <div id="vigenere_cipher_body">
+            <form  action={{url_for('vigenere_cipher_page')}}>
+                <div class="form-group">
+                    <label class="form-text" for="inputText">Text</label>
+                    <textarea type="text" name="text" class="form-control" id="inputText" placeholder="Type Text"></textarea>
+                </div>
+                <div class="form-row">
+                    <div class="form-group col-md-6">
+                        <label class="form-text" for="inputOption">Option</label>
+                        <select name="option" id="inputOption" class="form-control">
+                            <option selected value="1">Encrypt</option>
+                            <option value="2">Decrypt</option>
+                        </select>
+                    </div>
+                    <div class="form-group col-md-6">
+                        <label class="form-text" for="inputKey">Key</label>
+                        <input name="key" type="text" class="form-control" id="inputKey" placeholder="">
                     </div>
                 </div>
                 <button  type="submit" class="btn btn-primary">Submit</button>
